Drivers with the object.dimension variable are not updated #73254

Closed
opened 2020-01-20 10:38:08 +01:00 by Vasil · 8 comments

Blender Version
Broken: version: 2.83
Worked: 2.79b

Short description of error
The bounding box(dimensions) updating with delay in drivers.

Exact steps for others to reproduce the error

  • Open: Bouding_box_update_delay.blend
  • Select the box.
  • Change the x dimension of the box (Note that the cylinder is updated).
  • Select the cylinder.
  • Go to the drivers.
  • Remove the dummy variable.

Change the x dimension of the box (Note that the cylinder is not updated).

Also, I create a topic on blenderarist.com with ideas for better driver workflow. Please check them.
Drivers update -topic

**Blender Version** Broken: version: 2.83 Worked: 2.79b **Short description of error** The bounding box(dimensions) updating with delay in drivers. **Exact steps for others to reproduce the error** - Open: [Bouding_box_update_delay.blend](https://archive.blender.org/developer/F8385069/Bouding_box_update_delay.blend) - Select the box. - Change the x dimension of the box (Note that the cylinder is updated). - Select the cylinder. - Go to the drivers. - Remove the `dummy` variable. # Change the x dimension of the box (Note that the cylinder is **not** updated). Also, I create a topic on blenderarist.com with ideas for better driver workflow. Please check them. [Drivers update -topic ](https://blenderartists.org/t/bounding-box-driver/1202163)
Author

Added subscriber: @FeralMan

Added subscriber: @FeralMan

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.

The file has a dependency cycle with the x dimension of the cylinder. (it is not related to the bug but would be nice to avoid it):

Dependency cycle detected:
  OBCylinder/Parameters Component/DRIVER(modifiers["Array"].constant_offset_displace) depends on
  OBCylinder/Geometry Component/GEOMETRY_EVAL() via 'RNA Target -> Driver'
  OBCylinder/Geometry Component/GEOMETRY_EVAL_INIT() via 'Object Geometry UberEval'
  OBCylinder/Parameters Component/DRIVER(modifiers["Array"].constant_offset_displace) via 'Driver -> Driven Property'
Detected 1 dependency cycles

The problem is not seen in blender 2.79
It is interesting to note that if you add a location variable even without adding to the expression the problem seems to be solved.

I can confirm. The file has a `dependency cycle` with the x dimension of the cylinder. (it is not related to the bug but would be nice to avoid it): ``` Dependency cycle detected: OBCylinder/Parameters Component/DRIVER(modifiers["Array"].constant_offset_displace) depends on OBCylinder/Geometry Component/GEOMETRY_EVAL() via 'RNA Target -> Driver' OBCylinder/Geometry Component/GEOMETRY_EVAL_INIT() via 'Object Geometry UberEval' OBCylinder/Parameters Component/DRIVER(modifiers["Array"].constant_offset_displace) via 'Driver -> Driven Property' Detected 1 dependency cycles ``` The problem is not seen in blender 2.79 It is interesting to note that if you add a location variable even without adding to the expression the problem seems to be solved.
Germano Cavalcante changed title from Bounding box delay to Drivers with the object.dimension variable are not updated 2020-01-22 13:26:56 +01:00

Added subscriber: @MarcelLegindi

Added subscriber: @MarcelLegindi

Updated the description and removed the dependency cycle in the file.

Updated the description and removed the dependency cycle in the file.
Sybren A. Stüvel self-assigned this 2020-03-05 11:48:23 +01:00

This issue was referenced by 7d9a5b7b10

This issue was referenced by 7d9a5b7b10b439f62bcc522fee307a942b859ccc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73254
No description provided.