source/blender/depsgraph/intern/builder/deg_builder_relations.h
@@ -242,6 +242,7 @@ class DepsgraphRelationBuilder : public DepsgraphBuilder {
   virtual void build_driver_variables(ID *id, FCurve *fcurve);
   virtual void build_driver_id_property(ID *id, const char *rna_path);
   virtual void build_parameters(ID *id);
+  virtual void build_dimensions(Object *object);
   virtual void build_world(World *world);
   virtual void build_rigidbody(Scene *scene);
   virtual void build_particle_systems(Object *object);
